// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password component The Rendered HTML should have a label 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-1-1"
  >
    My Password Label
  </label>
  <input
    id="id-1-1"
    name="TextBox"
    type="password"
    value=""
  />
</div>
`;

exports[`Password component handling input should set a value when passed in but not be valid 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-2-1"
  >
    My Example Label
  </label>
  <input
    id="id-2-1"
    name="TextBox"
    type="password"
    value="password"
  />
</div>
`;
